--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,30 +42,23 @@
 </FrameLayout>-->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
-
-    <!-- android:layout_gravity="start" tells DrawerLayout to treat
-         this as a sliding drawer on the left side for left-to-right
-         languages and on the right side for right-to-left languages.
-         The drawer is given a fixed width in dp and extends the full height of
-         the container. A solid background is used for contrast
-         with the content view. -->
-
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:id="@+id/frCont"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    >
+
+
+<android.support.design.widget.CoordinatorLayout
+
+    android:id="@+id/coordinatorLayout"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -90,22 +83,39 @@
         android:scrollbars="horizontal"
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
+        android:background="@color/teal500"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        app:layout_scrollFlags="scroll|enterAlways" />
+        android:theme="@style/Toolbar"
 
-</LinearLayout>
-    <fragment
+
+        app:layout_scrollFlags="scroll|enterAlways" />
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.design.widget.AppBarLayout>
+
+ <!--   <fragment
 
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:id="@+id/navigation_frag"
         android:layout_gravity="start"
         android:background="@color/white"
-
         app:layout="@layout/fragment_navigation_drawer"
         android:name="moviez.mnf.com.movie.Fragments.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer"
-        />
+        />-->
 
+
+</android.support.design.widget.CoordinatorLayout>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_gravity="start"
+        app:theme="@style/nav"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/drawer"
+        />
 </android.support.v4.widget.DrawerLayout>
