--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -205,6 +205,24 @@
     <color name="holo_red_dark">#cc0000</color>
 
     <color name="transparent">#00000000</color>
+
+
+    <color name="grey50">#FAFAFA</color>
+
+    <color name="grey500">#E0E0E0</color>
+    <color name="grey600">#757575</color>
+    <color name="grey700">#616161</color>
+    <color name="grey800">#424242</color>
+    <color name="grey900">#212121</color>
+
+    <color name="greyDivi">#B6B6B6</color>
+
+    <color name="grey200">#EEEEEE</color>
+    <color name="pink400">#EC407A</color>
+    <color name="pink300">#F06292</color>
+    <color name="pink100">#F8BBD0</color>
+
+
 </resources>
 
 
