--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -8,17 +8,22 @@
         <item
             android:id="@+id/movieItem"
             android:checked="false"
+            android:icon="@mipmap/ic_movie"
             android:title="Movies"/>
 
         <item
             android:id="@+id/seriesItem"
             android:checked="false"
+            android:icon="@mipmap/ic_series"
             android:title="Series" />
 
         <item
             android:id="@+id/searchItem"
             android:checked="false"
+            android:icon="@mipmap/ic_search_glass"
+
             android:title="Search" />
+
 
       <!--  <item
             android:id="@+id/trash"
@@ -34,6 +39,21 @@
             android:title="Seventh" />
 -->
     </group>
+    <item android:title="Account Settings">
 
+    <group
+        android:id="@+id/acount_group"
+        android:checkableBehavior="single"
+        >
+        <item
+            android:id="@+id/signIn"
+            android:checked="false"
+            android:icon="@mipmap/ic_user"
+
+            android:title="Sign In" />
+
+    </group>
+
+</item>
 
 </menu>
