--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,6 +106,10 @@
         tools:layout="@layout/fragment_navigation_drawer"
         />-->
 
+    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
+        android:layout_width="wrap_content" android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
+        android:src="@mipmap/ic_search_two" />
 
 </android.support.design.widget.CoordinatorLayout>
     <android.support.design.widget.NavigationView
@@ -117,4 +121,6 @@
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/drawer"
         />
+
+
 </android.support.v4.widget.DrawerLayout>
