--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -19,7 +19,6 @@
             android:id="@+id/toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:fitsSystemWindows="true"
             android:background="@color/teal400"
             app:contentScrim="?attr/colorPrimary"
@@ -33,19 +32,49 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:theme="@style/Toolbar"
                 />
+
             <RelativeLayout
                 android:layout_width="fill_parent"
+                android:layout_marginLeft="140dp"
+                android:id="@+id/rekPer"
                 android:layout_height="fill_parent">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="test title"
+                    android:layout_alignParentBottom="true"
+                    android:padding="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:textColor="@color/white"
+                    android:id="@+id/namecast"
+
+                    android:textSize="20dp"
+                    />
+
             </RelativeLayout>
+
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
 
-    <include
-        layout="@layout/content_scrolling" />
 
+    <include
+
+        layout="@layout/content_scrolling" />
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@mipmap/ic_downlp"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/white"
+        android:layout_margin="@dimen/fab_margin"
+        android:id="@+id/imgpro"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|start"
+        />
    <!-- <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -54,16 +83,5 @@
         android:src="@android:drawable/ic_dialog_email"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" /> -->
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@mipmap/ic_downlp"
-        app:civ_border_width="2dp"
-        app:civ_border_color="@color/white"
-        android:layout_margin="@dimen/fab_margin"
-        android:id="@+id/imgpro"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|start"
-        />
 
 </android.support.design.widget.CoordinatorLayout>
