--- a/app/src/main/res/layout/cast_movie_item.xml
+++ b/app/src/main/res/layout/cast_movie_item.xml
@@ -7,14 +7,14 @@
     android:layout_height="wrap_content">
     <com.andexert.library.RippleView
         android:id="@+id/cast_movie_ripple"
-        android:layout_width="140dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         app:rv_color="@color/teal100"
         rv_centered="true">
 
 
         <android.support.v7.widget.CardView
-            android:layout_width="140dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:id="@+id/castmcard">
             <RelativeLayout
@@ -23,7 +23,7 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="160dp"
+                    android:layout_height="140dp"
                     android:scaleType="centerCrop"
                     android:id="@+id/castmPoster"
                     />
@@ -41,6 +41,20 @@
                     android:layout_below="@+id/castmPoster"
                     android:textSize="10dp"
                     android:id="@+id/castmTitle"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text=""
+                    android:layout_marginTop="3dp"
+                    android:gravity="center"
+                    android:layout_marginLeft="3dp"
+                    android:textColor="@color/grey700"
+                    android:fontFamily="sans-serif-condensed"
+
+                    android:layout_below="@+id/castmTitle"
+                    android:textSize="10dp"
+                    android:id="@+id/castChar"
                     />
 
             </RelativeLayout>
