--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -20,19 +20,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <TextView
+   <!-- <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:id="@+id/namecast"
-        android:text="test"
+        android:text=""
         android:paddingLeft="150dp"
         android:layout_marginTop="12dp"
         android:fontFamily="sans-serif-condensed"
         android:textSize="21dp"
+        />-->
 
-
-        />
     <RelativeLayout
         android:layout_width="match_parent"
         android:id="@+id/mainRel"
@@ -97,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/birthTag"
-                android:text="test"
+                android:text=""
 
                 android:textColor="@color/black"
                 android:id="@+id/birthday"
@@ -123,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tagplace"
                 android:id="@+id/place"
-                android:text="testcv"
+                android:text=""
 
                 android:textColor="@color/black"
                 />
@@ -148,7 +147,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/tagplace"
                         android:id="@+id/popula"
-                        android:text="testcv"
+                        android:text=""
 
                         android:textColor="@color/black"
                         />
@@ -163,6 +162,7 @@
             android:layout_height="wrap_content"
             custom:cardElevation="1dp"
             card_view:cardElevation="1dp"
+            android:visibility="gone"
             app:contentPadding="5dp"
             android:layout_below="@+id/propick"
             card_view:cardUseCompatPadding="true"
@@ -195,16 +195,58 @@
         </RelativeLayout>
         </android.support.v7.widget.CardView>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Movies "
+            android:visibility="gone"
+
+            android:id="@+id/tagMovieRec"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/propickTwo"
+            android:textSize="16dp"
+            android:textColor="@color/grey700"
+            />
+
+
         <android.support.v7.widget.RecyclerView
 
             android:layout_width="match_parent"
-            android:layout_below="@+id/propickTwo"
+            android:layout_below="@+id/tagMovieRec"
             android:id="@+id/cast_movie_rec"
-            android:visibility="visible"
+            android:visibility="gone"
+
             android:background="@color/splashbg"
             android:layout_alignParentLeft="true"
             android:layout_marginTop="15dp"
-            android:layout_height="210dp"/>
+            android:layout_height="200dp"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TV Series "
+            android:id="@+id/tagTvRec"
+            android:visibility="gone"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_below="@+id/cast_movie_rec"
+            android:textSize="16dp"
+            android:textColor="@color/grey700"
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+
+            android:layout_width="match_parent"
+            android:layout_below="@+id/tagTvRec"
+            android:id="@+id/castTvRec"
+            android:visibility="gone"
+            android:background="@color/splashbg"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="15dp"
+            android:layout_height="200dp"/>
 
 
         <fr.castorflex.android.circularprogressbar.CircularProgressBar
